RESOLVED FIXED151994
Light cleanup in TextPainter.
https://bugs.webkit.org/show_bug.cgi?id=151994
Summary Light cleanup in TextPainter.
alan
Reported 2015-12-08 08:53:29 PST
SSIA.
Attachments
Patch (6.22 KB, patch)
2015-12-08 09:04 PST, alan
darin: review+
zalan: commit-queue-
alan
Comment 1 2015-12-08 09:04:12 PST
WebKit Commit Bot
Comment 2 2015-12-08 09:05:00 PST
Attachment 266894 [details] did not pass style-queue: ERROR: Source/WebCore/rendering/TextPainter.cpp:86: Code inside a namespace should not be indented. [whitespace/indent] [4] ERROR: Source/WebCore/rendering/TextPainter.cpp:86: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/WebCore/rendering/TextPainter.cpp:87: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/WebCore/rendering/TextPainter.cpp:88: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/WebCore/rendering/TextPainter.cpp:89: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/WebCore/rendering/TextPainter.cpp:90: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/WebCore/rendering/TextPainter.cpp:91: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/WebCore/rendering/TextPainter.cpp:92: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/WebCore/rendering/TextPainter.cpp:93: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/WebCore/rendering/TextPainter.cpp:94: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/WebCore/rendering/TextPainter.cpp:95: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/WebCore/rendering/TextPainter.cpp:96: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/WebCore/rendering/TextPainter.cpp:97: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/WebCore/rendering/TextPainter.cpp:98: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/WebCore/rendering/TextPainter.cpp:99: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/WebCore/rendering/TextPainter.cpp:100: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/WebCore/rendering/TextPainter.cpp:101: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/WebCore/rendering/TextPainter.cpp:102: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/WebCore/rendering/TextPainter.cpp:103: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] Total errors found: 19 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
alan
Comment 3 2015-12-08 13:35:39 PST
Note You need to log in before you can comment on or make changes to this bug.