Light cleanup in TextPainter. https://bugs.webkit.org/show_bug.cgi?id=151994

Reviewed by Darin Adler.

No change in functionality.

* rendering/TextPainter.cpp:
(WebCore::TextPainter::TextPainter):
* rendering/TextPainter.h: Address post review comment.
(WebCore::ShadowApplier::isLastShadowIteration):
(WebCore::ShadowApplier::shadowIsCompletelyCoveredByText):

Canonical link: https://commits.webkit.org/170158@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193779 268f45cc-cd09-0410-ab3c-d52691b4dbfc